--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -10,10 +10,15 @@
         android:iconTint="@android:color/white"
         android:title="Your Products" />
         <item
-            android:id="@+id/posts"
-            android:icon="@drawable/ic_exit_to_app_black_24dp"
+        android:id="@+id/posts"
+        android:icon="@drawable/ic_exit_to_app_black_24dp"
+        android:iconTint="@android:color/white"
+        android:title="Posts" />
+        <item
+            android:id="@+id/nav_messsage"
+            android:icon="@drawable/ic_message_black_24dp"
             android:iconTint="@android:color/white"
-            android:title="Posts" />
+            android:title="Send message" />
     </group>
 
 
